# data-extraction-vlm

./: README.md  extraction.py  extraction_input_state.py  pyproject.toml  run.py
src/: config.py  data_extractors.py  enum_config.py  ignore_file.py
src/documents/: op.json  op2.json  op3.json
src/file_utils/: default.py  gemini.py
src/file_utils/addtl_utils/: azure.py  pdf_to_image.py  random.py
src/llm_clients/: default.py  gemini.py
src/prompt_utils/: dynamic_model_creation.py  model_fields.json
src/prompt_utils/configs/: base_lineitem_fields.json  base_po_fields.json
src/prompt_utils/configs/customer_a/: po_fields.json
src/prompt_utils/configs/form_type_documents/: lineitem_fields.json  po_fields.json
src/prompt_utils/configs/wire_domain/: lineitem_fields.json
src/prompt_utils/configs/wire_domain/customer_a/: po_fields.json
src/prompt_utils/schemas/: prompt.txt  response_format.py
